Table CPUCooler {
  name text [not null]
  mpn text [pk]
  ean text [not null]
  upc text [not null]
  brand text [not null]
  sockets text [not null]
  height integer [not null]
  tdp integer [not null]
  eightMm integer [not null]
  nintyTwoMm integer [not null]
  oneHundredTwentyMm integer [not null]
  oneHundredFortyMm integer [not null]
  twoHundredMm integer [not null]
  adicionalFan boolean [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table CPU {
  name text [not null]
  mpn text [pk]               
  ean text [not null]
  brand text [not null]
  cores integer [not null]
  threads integer [not null]
  speed real [not null]
  turboSpeed real
  tdp integer [not null]
  socket text [not null]     
  graphics text [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table GPU {
  name text [not null]
  mpn text [pk]
  ean text [not null]
  brand text [not null]
  length integer [not null]
  widthSlots real
  eightPin integer [not null]
  sixPin integer [not null]
  hdmi integer [not null]
  dp integer [not null]
  dvi integer [not null]
  vga integer [not null]
  boostClockSpeed real
  vram integer [not null]
  memoryClockSpeed real [not null]
  tdp integer [not null]
  sync text [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table HD {
  name text [not null]
  mpn text [pk]
  ean text [not null]
  brand text [not null]
  formFactor text [not null]
  capacity integer [not null]
  rpm integer [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table MemoriaRAM {
  name text [not null]
  mpn text [pk]
  ean text [not null]
  brand text [not null]
  type text [not null]        
  capacity integer [not null]
  clockSpeed integer [not null]
  timings text [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table PlacaMae {
  name text [not null]
  brand text [not null]
  mpn text [pk]
  ean text [not null]
  upc text [not null]
  socket text [not null]           
  chipset text [not null]
  formFactor text [not null]
  memoryType text [not null]       
  memoryCapacity integer [not null]
  memorySlots integer [not null]
  memorySpeed text
  sataSlots integer [not null]
  m2PCI3Slots integer [not null]
  m2PCI4Slots integer [not null]
  extensionPCI3x1 integer [not null]
  extensionPCI3x4 integer [not null]
  extensionPCI3x8 integer [not null]
  extensionPCI3x16 integer [not null]
  extensionPCI4x1 integer [not null]
  extensionPCI4x4 integer [not null]
  extensionPCI4x8 integer [not null]
  extensionPCI4x16 integer [not null]
  usb3Slots integer [not null]
  usb3Headers integer [not null]
  usb3CSlots integer [not null]
  vga integer [not null]
  dvi integer [not null]
  dp integer [not null]
  hdmi integer [not null]
  wifi text [not null]
  graphics text [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table FonteDeAlimentacao {
  name text [not null]
  mpn text [pk]
  ean text [not null]
  brand text [not null]
  power integer [not null]
  efficiency text [not null]
  type text [not null]
  eightPin integer [not null]
  sixPin integer [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

Table SSD {
  name text [not null]
  mpn text [pk]
  ean text [not null]
  brand text [not null]
  formFactor text [not null]
  protocol text [not null]
  capacity integer [not null]
  nandType text [not null]
  controller text [not null]
  imageUrl text [not null]
  originalUrl text [not null]
  productUrl text
}

// Tabela de associação para CPU ↔ CPUCooler (N:M)
Table CPU_Cooler {
  cpu_mpn text [not null, ref: > CPU.mpn]
  cooler_mpn text [not null, ref: > CPUCooler.mpn]
  // PK composta
  Indexes {
    (cpu_mpn, cooler_mpn) [pk]
  }
}

// Tabela de associação para CPU ↔ PlacaMae (N:M)
Table CPU_PlacaMae {
  cpu_mpn text [not null, ref: > CPU.mpn]
  placamae_mpn text [not null, ref: > PlacaMae.mpn]
  // PK composta
  Indexes {
    (cpu_mpn, placamae_mpn) [pk]
  }
}

// Tabela de associação para PlacaMae ↔ MemoriaRAM (N:M)
Table PlacaMae_MemoriaRAM {
  placamae_mpn text [not null, ref: > PlacaMae.mpn]
  memoriaram_mpn text [not null, ref: > MemoriaRAM.mpn]
  // PK composta
  Indexes {
    (placamae_mpn, memoriaram_mpn) [pk]
  }
}

